# CS4380-Project0

./: CMakeLists.txt  Makefile  README.md
deprecated/: Makefile
include/: myUtils.h
src/: main.cpp  myUtils.cpp  myUtils.h
tests/: unit_tests.cpp
